--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -30,6 +30,7 @@
     <color name="colorThumbUnchecked">#B0BEC5</color>
     <color name="colorTrackChecked">#FFC1E3</color>
     <color name="colorTrackUnchecked">#CFD8DC</color>
+    <color name="darker_green">#027148</color>
 
 
 
