--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="gray">#D3D3D3</color>
     <color name="white">#ffffff</color>
     <color name="green">#00D100</color>
+    <color name="darker_green">#027148</color>
+    <color name="darker_red">#32012C</color>
     <color name="red">#FF0000</color>
     <color name="main_color">#0B5E8C</color>
 
