--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -39,5 +39,6 @@
     <dimen name="txt_14sp">14sp</dimen>
     <dimen name="txt_12sp">12sp</dimen>
     <dimen name="txt_11sp">11sp</dimen>
+    <dimen name="txt_10sp">10sp</dimen>
     <dimen name="txt_13sp">13sp</dimen>
 </resources>
