Invoice settings completed

--- a/app/src/main/res/layout/fragment_credit_note_details.xml
+++ b/app/src/main/res/layout/fragment_credit_note_details.xml
@@ -108,7 +108,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="@id/tvTime"
-                            android:text="@{creditNote.invoiceId}"
+                            android:text="@{creditNote.invoiceNumber}"
                             tools:text="41"/>
 
                         <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_medium"
