--- a/app/src/main/res/layout/fragment_receipt.xml
+++ b/app/src/main/res/layout/fragment_receipt.xml
@@ -85,6 +85,7 @@
                     <TextView android:fontFamily="@font/montserrat_regular"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/isVisibleContact"
                         android:text='@{companyDetails.ShopContactNumber}'
                         android:textColor="@color/text_color_main"
                         android:layout_gravity="center"
@@ -98,7 +99,18 @@
                         android:textColor="@color/text_color_main"
                         android:layout_gravity="center"
                         android:textSize="14sp"
+                        android:id="@+id/isVisibleEmail"
                         tools:text="info@kreativesquadz.com"/>
+
+                    <TextView android:fontFamily="@font/montserrat_regular"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text='@{"GST : " + companyDetails.GSTNo}'
+                        android:textColor="@color/text_color_main"
+                        android:layout_gravity="center"
+                        android:textSize="14sp"
+                        android:id="@+id/isVisibleGst"
+                        tools:text="gst"/>
 
                     <TextView android:fontFamily="@font/montserrat_regular"
                         android:layout_width="wrap_content"
@@ -131,7 +143,7 @@
                         <TextView android:fontFamily="@font/montserrat_regular"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text='@{"Invoice : " + invoice.id}'
+                            android:text='@{"Invoice : " + invoice.invoiceNumber}'
                             android:textSize="12sp"
                             android:textStyle="bold"
                             android:layout_weight="1"
@@ -331,6 +343,7 @@
                             android:text='@{"Items : " + invoice.totalItems}'
                             android:textSize="12sp"
                             android:textStyle="bold"
+                            android:id="@id/tvItems"
                             android:layout_weight="1"
                             android:textColor="@color/text_color_main"
                             tools:text="Items: 3"/>
@@ -506,6 +519,8 @@
                         android:layout_height="wrap_content"
                         android:text="Payment Mode"
                         android:textSize="12sp"
+                        android:id="@+id/txtPayment"
+
                         android:layout_marginTop="@dimen/_10dp"
                         android:textStyle="bold"
                         android:textColor="@color/text_color_main"
@@ -514,47 +529,56 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="2"
-                        android:orientation="horizontal">
-                        <TextView android:fontFamily="@font/montserrat_regular"
+                        android:id="@+id/paymentViews"
+                        android:orientation="vertical">
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:visibility="@{invoice.cashAmount==null||invoice.cashAmount==0 ? View.GONE : View.VISIBLE }"
-                            android:text='@{"Cash : " + invoice.cashAmount}'
-                            android:textSize="12sp"
-                            android:textStyle="bold"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:textColor="@color/text_color_main"
-                            android:layout_gravity="center"
-                            tools:text="Cash : 1000"/>
+                            android:weightSum="2"
+                            android:orientation="horizontal">
+                            <TextView android:fontFamily="@font/montserrat_regular"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:visibility="@{invoice.cashAmount==null||invoice.cashAmount==0 ? View.GONE : View.VISIBLE }"
+                                android:text='@{"Cash : " + invoice.cashAmount}'
+                                android:textSize="12sp"
+                                android:textStyle="bold"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:textColor="@color/text_color_main"
+                                android:layout_gravity="center"
+                                tools:text="Cash : 1000"/>
+                            <TextView android:fontFamily="@font/montserrat_regular"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:visibility="@{invoice.onlineAmount==null||invoice.onlineAmount==0 ? View.GONE : View.VISIBLE }"
+                                android:text='@{"Online : " + invoice.onlineAmount}'
+                                android:textSize="12sp"
+                                android:gravity="center"
+                                android:textStyle="bold"
+                                android:textColor="@color/text_color_main"
+                                android:layout_gravity="center"
+                                tools:text="Online : 1000"/>
+
+                        </LinearLayout>
+
                         <TextView android:fontFamily="@font/montserrat_regular"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:visibility="@{invoice.onlineAmount==null||invoice.onlineAmount==0 ? View.GONE : View.VISIBLE }"
-                            android:text='@{"Online : " + invoice.onlineAmount}'
+                            android:visibility="@{invoice.creditAmount==null||invoice.creditAmount==0 ? View.GONE : View.VISIBLE }"
+                            android:text='@{"Credit : " + invoice.creditAmount}'
                             android:textSize="12sp"
                             android:gravity="center"
                             android:textStyle="bold"
                             android:textColor="@color/text_color_main"
                             android:layout_gravity="center"
-                            tools:text="Online : 1000"/>
+                            tools:text="Credit : 1000"/>
+
+
 
                     </LinearLayout>
-
-                    <TextView android:fontFamily="@font/montserrat_regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="@{invoice.creditAmount==null||invoice.creditAmount==0 ? View.GONE : View.VISIBLE }"
-                        android:text='@{"Credit : " + invoice.creditAmount}'
-                        android:textSize="12sp"
-                        android:gravity="center"
-                        android:textStyle="bold"
-                        android:textColor="@color/text_color_main"
-                        android:layout_gravity="center"
-                        tools:text="Credit : 1000"/>
 
 
                     <View
