--- a/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
+++ b/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
@@ -1,13 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.settings.menuItems.taxSettings.tab.taxQuickSell.TaxForQuickSellFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <TextView
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_margin="@dimen/_10dp"
+        android:orientation="vertical">
+        <TextView
+            android:fontFamily="@font/montserrat_medium"
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginBottom="@dimen/_10dp"
+            android:textSize="@dimen/txt_16sp"
+            android:layout_marginTop="@dimen/_20dp"
+            android:textColor="@color/colorPrimary"
+            android:text="Default Tax for QuickSale"/>
 
-</FrameLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_10dp"
+            android:id="@+id/taxView"
+            >
+
+            <AutoCompleteTextView
+                android:id="@+id/dropdownTaxType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="none"
+                android:hint="Default Tax Type" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recyclerView"
+            android:nestedScrollingEnabled="false"
+            tools:listitem="@layout/item_tax_add_products"
+            tools:itemCount="1" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:id="@+id/btnAdd"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="@dimen/_5dp"
+            app:cardUseCompatPadding="true"
+            android:textStyle="bold"
+            android:layout_marginStart="@dimen/_10dp"
+            app:cardBackgroundColor="@color/colorPrimaryDark"
+            android:textColor="@color/text_color_heading"
+            android:gravity="center">
+
+            <TextView android:fontFamily="@font/montserrat_regular"
+                android:layout_width="match_parent"
+                android:id="@+id/iv_equals"
+                android:layout_height="match_parent"
+                android:text="Update"
+                android:padding="@dimen/_10dp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
+
+</layout>
