--- a/app/src/main/res/layout/item_tax.xml
+++ b/app/src/main/res/layout/item_tax.xml
@@ -7,17 +7,17 @@
 
         <variable
             name="gst"
-            type="com.kreativesquadz.billkit.model.GST" /> <!-- Replace "your.package.name" with your actual package name -->
+            type="com.kreativesquadz.billkit.model.settings.GST" /> <!-- Replace "your.package.name" with your actual package name -->
 
     </data>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/lite_grey_200"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="2dp">
+        android:background="@drawable/corner_four_grey"
+        android:layout_marginStart="@dimen/_10dp"
+        android:layout_marginEnd="@dimen/_10dp"
+        android:layout_marginTop="@dimen/_10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -91,5 +91,5 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </layout>
