--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -146,6 +146,13 @@
             app:popExitAnim="@anim/zoom_out"
             android:id="@+id/action_settingsFrag_to_printerSettingsFragment"
             app:destination="@id/printerSettingsFragment" />
+        <action
+            app:enterAnim="@anim/zoom_in"
+            app:exitAnim="@anim/zoom_out"
+            app:popEnterAnim="@anim/zoom_in"
+            app:popExitAnim="@anim/zoom_out"
+            android:id="@+id/action_settingsFrag_to_posSettingsFrag"
+            app:destination="@id/posSettingsFrag" />
     </fragment>
     <fragment
         android:id="@+id/billDetailsFrag"
@@ -308,7 +315,11 @@
         android:id="@+id/taxSettingsFragment"
         android:name="com.kreativesquadz.billkit.ui.settings.menuItems.taxSettings.TaxSettingsFragment"
         android:label="Tax Settings"
-        tools:layout="@layout/fragment_tax_settings" />
+        tools:layout="@layout/fragment_tax_settings" >
+        <action
+            android:id="@+id/action_taxSettingsFragment_to_taxDetailsSettingFragment"
+            app:destination="@id/taxDetailsSettingFragment" />
+    </fragment>
     <fragment
         android:id="@+id/splitFragment"
         android:name="com.kreativesquadz.billkit.ui.home.billDetails.split.SplitFragment"
@@ -382,7 +393,7 @@
     <fragment
         android:id="@+id/editCustomerFragment"
         android:name="com.kreativesquadz.billkit.ui.customerManag.editCustomer.EditCustomerFragment"
-        android:label="EditCustomerFragment" />
+        android:label="Edit Customer" />
     <fragment
         android:id="@+id/editStaffFragment"
         android:name="com.kreativesquadz.billkit.ui.staffManag.edit.EditStaffFragment"
@@ -394,13 +405,26 @@
     <fragment
         android:id="@+id/invoiceResetFragment"
         android:name="com.kreativesquadz.billkit.ui.settings.menuItems.InvoiceSettings.tab.tabInvoiceFrag.invoiceResetFrag.InvoiceResetFragment"
-        android:label="InvoiceResetFragment">
+        android:label="Invoice Reset">
 
         <argument android:name="invoicePrefix"
             app:argType="string"/>
         <argument android:name="invoiceNumber"
             app:argType="integer"/>
     </fragment>
+    <fragment
+        android:id="@+id/taxDetailsSettingFragment"
+        android:name="com.kreativesquadz.billkit.ui.settings.menuItems.taxSettings.tab.tabTaxes.taxDetails.TaxDetailsSettingFragment"
+        android:label="Tax Setting" >
+
+        <argument android:name="selectedGstTax"
+           app:argType="com.kreativesquadz.billkit.model.settings.GST"/>
+
+    </fragment>
+    <fragment
+        android:id="@+id/posSettingsFrag"
+        android:name="com.kreativesquadz.billkit.ui.settings.menuItems.posSettings.PosSettingsFrag"
+        android:label="POS Settings" />
 
 
 </navigation>
