--- a/app/src/main/res/layout/dialog_fragment_add_gst.xml
+++ b/app/src/main/res/layout/dialog_fragment_add_gst.xml
@@ -64,7 +64,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <AutoCompleteTextView
-                        android:id="@+id/etProductMrp"
+                        android:id="@+id/etProductGst"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/txt_14sp"
